--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -1,8 +1,10 @@
 name: Run python tests
 
 on:
-  ['push','pull_request']:
+  push:
     branches: ['master','main']
+  pull_request:
+    branches: [ 'master','main' ]
 
 jobs:
   build:
